<resources>
    <string name="app_name">FilmApp</string>
    <string name="title">Title</string>
    <string name="batman">Batman</string>
    <string name="the_batman_film">The batman film</string>
    <string name="details">Details</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description</string>
    <string name="film_poster">Film Poster</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="did_you_enjoy_the_movie">Did you enjoy the movie?</string>
    <string name="please_leave_any_comments_if_yoy_have">Please leave any comments if yoy have</string>
    <string name="send_comments_back">Send Comments back</string>
    <string name="favourite">Favourite</string>
    <string name="deleted_message">Film was successfully deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="supporting_text">Do you want to leave</string>
    <string name="decline">Nope</string>
    <string name="accept">Yes</string>
    <string name="favourites">Favourites</string>
    <string name="all_films">All films</string>
    <string name="the_best_movie_app">The best movie app</string>
    <string name="add_to_fav_text">Favourites</string>
    <string name="film_was_added_to_fav">Favourites</string>
    <string name="genre">Genre:</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="rate_the_film">Rate the film</string>
</resources>